@@ -1,3 +1,7 @@
+2020-07-16  Rob Savoye  <rob@senecass.com>
+
+	* baseboards/qemu.exp: Works now with qemu instead of sim.
+
 2020-07-06  Rob Savoye  <rob@senecass.com>
 
 	* baseboards/qemu.exp: Initial working support to use qemu for
